# dwergaz

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  dwergaz.cabal
.github/workflows/: haskell-ci.yml
src/: Dwergaz.hs
src/Test/: Dwergaz.hs
test/: Main.hs
tests/: Main.hs
