cabal-version:       2.4
name:                dwergaz
version:             0.3.0.0
synopsis:            A minimal testing library
description:         dwergaz is a minimal testing library with no external dependencies.
license:             ISC
license-file:        LICENSE
author:              Henry Till
maintainer:          henrytill@gmail.com
homepage:            https://github.com/henrytill/dwergaz
copyright:           Copyright (c) 2017-2024, Henry Till
category:            Testing
build-type:          Simple
extra-doc-files:     ChangeLog.md
tested-with:         GHC ==9.4.8 || ==9.6.6 || ==9.8.2

source-repository head
  type:     git
  location: https://github.com/henrytill/dwergaz.git

library
  exposed-modules:     Test.Dwergaz
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <5
                     , pretty >=1.1 && <1.2
  hs-source-dirs:      src
  default-language:    Haskell98
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5
                     , dwergaz
  hs-source-dirs:      test
  default-language:    Haskell98
  ghc-options:         -Wall
